--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,12 +198,57 @@ header nav ul li a:hover {
     background-size: cover;
 }
 
-.grid-item.project-1 {
+.grid-item.project-1{
     background-image: url("../images/project1.jpg");
+    background-size: cover;
+}
+.grid-item.project-2 {
+    background-image: url("../images/project2.jpg");
+    background-size: cover;
+}
+
+.grid-item.project-3 {
+    background-image: url("../images/project3.jpg");
     background-size: cover;
 }
 
 .contain {
     background-color: #2b4d6b;
     color: #ffffff;
+}
+
+
+/* Media Query for smaller desktop screens and smaller */
+@media screen and (max-width: 980px) {
+    header {
+        padding-bottom: 0;
+        justify-content: center;
+        position: relative;
+    }
+
+    header h1 {
+        width: 100%;
+        text-align: center;
+    }
+
+    header nav ul {
+        margin-top: 15px;
+        width: 80%;
+        justify-content: center;
+    }
+
+    header nav ul li a {
+        font-size: 20px;
+    }
+
+    .contact nav ul {
+        width: 100%;
+        justify-content: flex-end;
+    }
+
+    .contact nav ul li a {
+        text-align: center;
+        font-size: 15px;
+    }
+
 }
