--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 
 :root {
+    --primary-color: #2b4d6b;
+    --secondary-color: #ffffff;
     
 }
 
@@ -12,13 +14,13 @@
 
 body {
     font-family: Helvetica, Arial, sans-serif;
-    background-color: #2b4d6b;
+    background-color: var(--primary-color);
 }
 
 header {
     padding: 20px;
     display: flex;
-    background-color: #2b4d6b;
+    background-color: var(--primary-color);
     justify-content: space-between;
     position: -webkit-sticky;
     position: sticky;
@@ -28,13 +30,13 @@ header {
 header h1 {
     font-weight: bold;
     font-size: 40px;
-    color: #ffffff;
+    color: var(--secondary-color);
     margin: 0;
     text-shadow: 0 0 10px rgba(21, 19, 175, 0.5);
 }
 
 header a {
-    color: #ffffff;
+    color: var(--secondary-color);
     text-decoration: none;
 }
 
@@ -58,12 +60,12 @@ header nav ul li a {
 }
 
 header nav ul li a:hover {
-    background: #ffffff;
-    color: #2b4d6b;
+    background: var(--secondary-color);
+    color: var(--primary-color);
     border-radius: 15px;
     text-shadow: none;
     text-decoration: underline;
-    text-decoration-color:#2b4d6b;
+    text-decoration-color:var(--primary-color);
 }
 
 .contact nav ul {
@@ -76,18 +78,18 @@ header nav ul li a:hover {
 .contact nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
-    color: #ffffff;
+    color: var(--secondary-color);
     text-decoration:none;
     font-size: 1.55vw;
     text-shadow: 0 0 10px rgba(21, 19, 175, 0.5);
 }
 
 .contact nav ul li a:hover {
-    background: #ffffff;
-    color: #2b4d6b;
+    background: var(--secondary-color);
+    color: var(--primary-color);
     border-radius: 15px;
     text-shadow: none;
-    text-decoration-color:#2b4d6b;
+    text-decoration-color:var(--primary-color);
 }
 /* Hero Section */
 
@@ -115,12 +117,12 @@ header nav ul li a:hover {
     left: 0;
     font-size: 25px;
     font-weight: bold;
-    color: #ffffff;
+    color: var(--secondary-color);
 }
 
 .section-title {
     font-size: 32px;
-    color: #ffffff;
+    color: var(--secondary-color);
     border-bottom: 3px solid;
     padding: 20px 0;
     text-align: center;
@@ -129,12 +131,12 @@ header nav ul li a:hover {
 }
 
 .primary-border {
-    border-color: #ffffff;
+    border-color: var(--secondary-color);
 }
 
 .secondary-border {
-    border-color: #2b4d6b;
-    color: #2b4d6b;
+    border-color: var(--primary-color);
+    color: var(--primary-color);
 }
 
 .about {
@@ -144,7 +146,7 @@ header nav ul li a:hover {
 
 .about p{
     line-height: 2;
-    color: #ffffff;
+    color: var(--secondary-color);
     width: 80%;
     font-size: 16px;
     margin: 0 auto;
@@ -154,9 +156,9 @@ header nav ul li a:hover {
 /* Work Section */
 
 .page-section {
-    color:#2b4d6b;
+    color:var(--primary-color);
     margin: 0;
-    background-color: #ffffff;
+    background-color: var(--secondary-color);
     padding: 30px;
 }
 
@@ -167,19 +169,19 @@ header nav ul li a:hover {
 }
 
 .grid-container {
-    background: #2b4d6b;
+    background: var(--primary-color);
     width: 80%;
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: repeat(3,200px);
     border: 2px solid #000000;
-    color: #ffffff;
+    color: var(--secondary-color);
     font-size: 18px;
     grid-gap: 10px;
 }
 
 .grid-item {
-    border: 2px solid #2b4d6b;
+    border: 2px solid var(--primary-color);
     display: flex;
     align-items: flex-end;
     justify-content: flex-start;
@@ -225,8 +227,8 @@ header nav ul li a:hover {
     position: relative;
     overflow: hidden;
     font-weight: bold;
-    background-color: #ffffff;
-    color: #2b4d6b;
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
     bottom: 10px;
 }
 
@@ -249,8 +251,8 @@ header nav ul li a:hover {
     position: relative;
     overflow: hidden;
     font-weight: bold;
-    background-color: #ffffff;
-    color: #2b4d6b;
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
     bottom: 10px;
 }
 .runbuddy-img h3 {
@@ -271,8 +273,8 @@ header nav ul li a:hover {
     position: relative;
     overflow: hidden;
     font-weight: bold;
-    background-color: #ffffff;
-    color: #2b4d6b;
+    background-color: var(--secondary-color);
+    color: var(--primary-color);
     bottom: 10px;
 }
 
