added screen genius

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,7 +204,7 @@ header nav ul li a:hover {
 }
 
 .grid-item.project-1{
-    background-image: url("../images/project1.jpg");
+    background-image: url("../images/screen-genius.png");
     background-size: cover;
     text-decoration: none;
 }
